--- a/DummyClassSolution/DummyClassSolution/DummyClassSolution.csproj
+++ b/DummyClassSolution/DummyClassSolution/DummyClassSolution.csproj
@@ -47,16 +47,25 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DummyClass.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="StartSearchPage.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="StartSearchPage.Designer.cs">
+      <DependentUpon>StartSearchPage.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ShowPage.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ShowPage.Designer.cs">
+      <DependentUpon>ShowPage.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="StartSearchPage.resx">
+      <DependentUpon>StartSearchPage.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ShowPage.resx">
+      <DependentUpon>ShowPage.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
