--- a/DummyClassSolution/DummyClassSolution/DummyClassSolution.csproj
+++ b/DummyClassSolution/DummyClassSolution/DummyClassSolution.csproj
@@ -55,6 +55,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SteamTheme.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SteamTheme.Designer.cs">
+      <DependentUpon>SteamTheme.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="StartSearchPage.resx">
       <DependentUpon>StartSearchPage.cs</DependentUpon>
     </EmbeddedResource>
@@ -67,6 +73,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="SteamTheme.resx">
+      <DependentUpon>SteamTheme.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="ClassDiagram1.cd" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
