--- a/DummyClassSolution/DummyClassSolution/DummyClassSolution.csproj
+++ b/DummyClassSolution/DummyClassSolution/DummyClassSolution.csproj
@@ -50,6 +50,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DummyClass.cs" />
+    <Compile Include="DevPrompt.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DevPrompt.Designer.cs">
+      <DependentUpon>DevPrompt.cs</DependentUpon>
+    </Compile>
     <Compile Include="StartSearchPage.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -64,6 +70,9 @@
     <Compile Include="SteamTheme.Designer.cs">
       <DependentUpon>SteamTheme.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="DevPrompt.resx">
+      <DependentUpon>DevPrompt.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="StartSearchPage.resx">
       <DependentUpon>StartSearchPage.cs</DependentUpon>
     </EmbeddedResource>
