--- a/DummyClassSolution/DummyClassSolution/Properties/Settings.settings
+++ b/DummyClassSolution/DummyClassSolution/Properties/Settings.settings
@@ -2,8 +2,8 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="DummyClassSolution.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="DevKey" Type="System.String" Scope="Application">
-      <Value Profile="(Default)" />
+    <Setting Name="DevKey" Type="System.String" Scope="User">
+      <Value Profile="(Default)">null</Value>
     </Setting>
   </Settings>
 </SettingsFile>
