--- a/DummyClassSolution/DummyClassSolution/DummyClassSolution.csproj
+++ b/DummyClassSolution/DummyClassSolution/DummyClassSolution.csproj
@@ -56,11 +56,11 @@
     <Compile Include="DevPrompt.Designer.cs">
       <DependentUpon>DevPrompt.cs</DependentUpon>
     </Compile>
-    <Compile Include="StartSearchPage.cs">
+    <Compile Include="TagFilterHolder.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="StartSearchPage.Designer.cs">
-      <DependentUpon>StartSearchPage.cs</DependentUpon>
+    <Compile Include="TagFilterHolder.Designer.cs">
+      <DependentUpon>TagFilterHolder.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -73,8 +73,8 @@
     <EmbeddedResource Include="DevPrompt.resx">
       <DependentUpon>DevPrompt.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="StartSearchPage.resx">
-      <DependentUpon>StartSearchPage.cs</DependentUpon>
+    <EmbeddedResource Include="TagFilterHolder.resx">
+      <DependentUpon>TagFilterHolder.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
