Various edits (COMPARE!)

--- a/DummyClassSolution/DummyClassSolution/App.config
+++ b/DummyClassSolution/DummyClassSolution/App.config
@@ -12,7 +12,7 @@
     <userSettings>
         <DummyClassSolution.Properties.Settings>
             <setting name="DevKey" serializeAs="String">
-                <value>null</value>
+                <value>API Key</value>
             </setting>
         </DummyClassSolution.Properties.Settings>
     </userSettings>
